[package]
name = "gamble-game-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bevy requires explicit feature flags for audio formats.
# "wav" enables WAV file support (not included by default in 0.18)
# Other audio features: "vorbis" (OGG), "mp3", "flac"
bevy = { version = "0.18.0", features = ["wav"] }
rand = "0.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
